tests/testcases/errors/BCE0132-5.boo
"""
BCE0132-5.boo(9,10): BCE0132: The namespace 'Foo.Bar' already contains a definition for 'A'.
"""
namespace Foo.Bar

class A:
	pass
	
callable A()
